image overflowing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ p {
   font-size: 16px;
 }
 
+img{
+  width: 100%;
+}
+
 #date {
   color: #ff2a5f;
 }
